Finish the project x4

--- a/shared/translations/emails+intl-icu.en.yml
+++ b/shared/translations/emails+intl-icu.en.yml
@@ -40,7 +40,8 @@ account_registration:
 server_setup:
   subject: "{name}: Server Setup"
   text_1: "Please use the following Client ID and Secret in your environment (.env file or shell environment) to setup your file server:"
-  client_id: "CLIENT_ID={client_id}"
-  secret: "CLIENT_SECRET={secret}"
-  text_2: "If you lose this Client ID or Secret, you can generate a new one in the Fangi Mycelium dashboard."
+  server: "HYPHAE_OAUTH_SERVER={server}"
+  client_id: "HYPHAE_OAUTH_CLIENT_ID={client_id}"
+  secret: "HYPHAE_OAUTH_CLIENT_SECRET={secret}"
+  text_2: "If you lose Server, Client ID or Secret, you can generate a new one in the Fangi Mycelium dashboard."
   text_3: "If you did not request this setup, please ignore this email or contact our support team immediately."
